<resources>
    <string name="app_name">Automatic Wallpaperchanger</string>
    <string name="image_with_no_permission_sign">image with no permission sign</string>
    <string name="main_msg_tap_to_give_permission">TAP TO GIVE PERMISSION</string>
    <string name="main_btn_txt_start">start scheduling</string>
    <string name="main_btn_txt_stop">stop scheduling</string>
    <string name="main_btn_txt_add_pictures">add picture</string>
    <string name="main_tv_delay">Delay</string>
    <string name="main_tv_interval">Interval</string>
    <string name="main_chooser_title">Select a picture</string>
    <string name="main_toast_wrong_result">NO PICTURE</string>
    <string name="image">image</string>
    <string name="checkbox">checkbox</string>
    <string name="toolbar_title_choose_a_picture">Choose a picture</string>
    <string name="arrow">arrow</string>
    <string name="btn_txt_upgrade">UPGRADE</string>
</resources>
