<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/offset_4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/main_tv_delay"
                android:layout_gravity="center"
                android:padding="@dimen/offset_4"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/npDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:elevation="@dimen/offset_4"
                android:soundEffectsEnabled="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/main_tv_interval"
                android:layout_gravity="center"
                android:padding="@dimen/offset_4"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/npInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/offset_4"
                android:soundEffectsEnabled="true" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnStartStop"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_txt_start" />

    <Button
        android:id="@+id/btnAddPicture"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_txt_add_pictures" />

    <Button
        android:id="@+id/btnUpgrade"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_upgrade" />

    <ProgressBar
        android:id="@+id/pb"
        android:visibility="gone"
        style="@style/ProgressBarStyle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPictures"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
